# inteligencia-artificial

./: README.md  pyproject.toml
anotacoes-colab/: 01-basico.ipynb  02-numpy.ipynb  04_groupby.ipynb  05_matplotlib.ipynb
