[tool.poetry]
name = "inteligencia-artificial"
version = "0.1.0"
description = ""
authors = ["katewitkoski <ka.lwitkoski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
